<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global -->
    <string name="app_name">Goal Tracker</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="date_today">Today</string>

    <!-- Menus -->
    <string name="menu_create_task">Create Task</string>
    <string name="menu_edit_task">Edit Task</string>
    <string name="menu_delete_task">Delete Task</string>
    <string name="menu_view_task_reports">View Reports</string>
    <string name="menu_create_report">Add Report</string>
    <string name="menu_delete_report">Delete Report</string>
    <string name="context_menu_edit_task">Edit</string>
    <string name="context_menu_delete_task">Delete</string>
    <string name="context_menu_view_task_graph">Graph</string>
    <string name="context_menu_view_task_reports">Reports</string>
    <string name="context_menu_edit_report">Edit</string>
    <string name="context_menu_delete_report">Delete</string>
    
    <!-- List of tasks -->
    <string name="message_no_tasks">No tasks yet</string>

    <!-- Edit task -->
    <string name="title_edit_task">Edit Task</string>
    <string name="title_add_task">Add Task</string>
    <string name="task_title">Title</string>
    <string name="task_default_title">New task</string>
    <string name="task_start_value">Start value</string>
    <string name="task_target_value">Target value</string>
    <string name="button_save_task">Save</string>
    <string name="button_cancel_edit_task">Cancel</string>
    <string name="message_task_created">New task has been created</string>
    <string name="message_task_updated">Task has been updated</string>
    <string name="message_task_deleted">Task has been deleted</string>
    <string name="delete_task_title">Delete Task</string>
    <string name="delete_task_message">This task will be deleted</string>

    <!-- List of reports -->
    <string name="message_no_reports">No reports yet</string>

    <!-- Edit report -->
    <string name="title_edit_report">Edit Report</string>
    <string name="title_add_report">Add Report</string>
    <string name="report_date">Date</string>
    <string name="report_value">Value</string>
    <string name="button_save_report">Save</string>
    <string name="button_cancel_edit_report">Cancel</string>
    <string name="message_report_created">New report has been created</string>
    <string name="message_report_updated">Report has been updated</string>
    <string name="message_report_deleted">Report has been deleted</string>
    <string name="report_error_date_exists">Report with this date already exists</string>
    <string name="delete_report_title">Delete Report</string>
    <string name="delete_report_message">This report will be deleted</string>

</resources>
