<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        <TextView
            android:text="@string/report_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Medium"/>
        <Button
            android:id="@+id/report_date_picker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Medium.Inverse"
            android:text=""/>
        <TextView
            android:text="@string/report_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Medium"/>
        <EditText
            android:id="@+id/report_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_save_report"
            android:text="@string/button_save_report"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"/>
        <Button
            android:id="@+id/button_cancel_edit_report"
            android:text="@string/button_cancel_edit_report"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"/>
    </LinearLayout>
</LinearLayout>
